<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:id="@+id/child"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

        <ImageView
            android:id="@+id/resistorPic"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="284dp"
            android:contentDescription="@string/pic_description"
            android:scaleX="3"
            android:src="@mipmap/ic_launcher_foreground" />

        <Button
            android:id="@+id/value1"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="85dp"
            app:backgroundTint="#FF0000" />

        <Button
            android:id="@+id/value2"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="85dp"
            android:layout_toEndOf="@+id/value1"
            android:layout_toRightOf="@+id/value1"
            app:backgroundTint="#FF0000" />

        <Button
            android:id="@+id/value3"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="85dp"
            android:layout_toEndOf="@+id/value2"
            android:layout_toRightOf="@+id/value2"
            app:backgroundTint="#FF0000" />

        <Button
            android:id="@+id/tolerance"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="85dp"
            android:layout_toEndOf="@+id/value3"
            android:layout_toRightOf="@+id/value3"
            app:backgroundTint="#D4AF37" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="151dp"
            android:layout_marginLeft="151dp"
            android:layout_marginBottom="2dp"
            android:text="@string/calculate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ohms"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="2dp"
            android:text="@string/credit" />

        <EditText
            android:id="@+id/ohms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculate"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="179dp"
            android:ems="10"
            android:hint="@string/ohms"
            android:inputType="numberDecimal"
            android:text="@string/omega"
            android:gravity="right"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ohms"
            android:layout_marginTop="0dp"
            android:text="@string/maxmin" />

        <TextView
            android:id="@+id/maxMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ohms"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>